--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "test",
-  "description": "test",
-  "license": "MIT",
-  "devDependencies": {
-    "karma": "^0.12.24",
-    "karma-cli": "0.0.4",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.4"
-  },
-  "repository": "https://github.com/stephenzeng/TravisTest.git"
+    "name": "test",
+    "description": "test",
+    "license": "MIT",
+    "devDependencies": {
+        "karma": "^0.12.24",
+        "karma-cli": "0.0.4",
+        "karma-jasmine": "^0.1.5",
+        "karma-phantomjs-launcher": "^0.1.4"
+    },
+    "repository": "https://github.com/stephenzeng/TravisTest.git",
+    "scripts": {
+        "test": "karma start karma.conf.js --single-run"
+    }
 }
