--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "karma": "^0.12.24",
         "karma-cli": "0.0.4",
         "karma-jasmine": "^0.1.5",
+        "phantomjs": "*",
         "karma-phantomjs-launcher": "^0.1.4"
     },
     "repository": "https://github.com/stephenzeng/TravisTest.git",
