--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,9 @@ node_js:
 
 notifications:
   email: false
+
+notifications:
+  email: false
+
+before_install:
+  - npm install karma-phantomjs-launcher
