--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     },
     "repository": "https://github.com/stephenzeng/TravisTest.git",
     "scripts": {
-        "test": "karma start karma.conf.js --single-run"
+        "test": "karma start --single-run"
     }
 }
